--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,17 @@
     <dimen name="signin_marginT">12dp</dimen>
     <dimen name="signinup_linearL2">50dp</dimen>
     <dimen name="signin_relativeL1">20dp</dimen>
+    <dimen name="home_relative1">90dp</dimen>
+    <dimen name="home_date_text_size">30dp</dimen>
+    <dimen name="home_text_size_2">60dp</dimen>
+    <dimen name="home_text_size_3">30dp</dimen>
+    <dimen name="sunny_margin_top">13dp</dimen>
+    <dimen name="celsious">5dp</dimen>
+    <dimen name="home_box_size">75dp</dimen>
+    <dimen name="time_text_size">17dp</dimen>
+    <dimen name="home_text_size_4">17dp</dimen>
+    <dimen name="home_relative3">60dp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
