--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -47,13 +47,13 @@
         android:id="@+id/calendar1"
         android:layout_below="@id/homeRelative1"></CalendarView>
 
-    <ImageView
+    <View
         android:id="@+id/homeImageView2"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="1dp"
         android:layout_below="@id/calendar1"
-        android:alpha="1"
-        android:src="@drawable/line" />
+        android:background="@color/colorWhite"
+        android:alpha="0.2"/>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -127,12 +127,12 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="40dp" />
 
-                <ImageView
+                <View
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="1dp"
                     android:layout_alignParentBottom="true"
-                    android:alpha="1"
-                    android:src="@drawable/line" />
+                    android:alpha="0.2"
+                    android:background="@color/colorWhite"/>
 
             </RelativeLayout>
 
@@ -196,12 +196,12 @@
                     android:textColor="@color/colorWhite"
                     android:textSize="40dp" />
 
-                <ImageView
+                <View
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_height="1dp"
                     android:layout_alignParentBottom="true"
-                    android:alpha="1"
-                    android:src="@drawable/line" />
+                    android:alpha="0.2"
+                    android:background="@color/colorWhite"/>
 
             </RelativeLayout>
 
